# strava-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/strava_mcp/: __init__.py  oauth.py  server.py  tokens.py
src/strava_mcp/templates/: login_results.html
tests/: conftest.py  test_oauth.py  test_tokens.py  test_tools.py
